// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyRoomList /> should display empty state for filter favourite 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      You don't have favourite chat yet
    </span>
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_description"
    >
      You can add a chat to your favourites in the chat settings
    </span>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should display empty state for filter people 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      You don’t have direct chats with anyone yet
    </span>
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_description"
    >
      You can deselect filters in order to see your other chats
    </span>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should display empty state for filter rooms 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      You’re not in any room yet
    </span>
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_description"
    >
      You can deselect filters in order to see your other chats
    </span>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should display the empty state for the invite filter 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      You don't have any unread invites
    </span>
    <button
      class="_button_vczzf_8"
      data-kind="tertiary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      See all activity
    </button>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should display the empty state for the low priority filter 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      You don't have any low priority rooms
    </span>
    <button
      class="_button_vczzf_8"
      data-kind="tertiary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      See all activity
    </button>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should display the empty state for the mention filter 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      You don't have any unread mentions
    </span>
    <button
      class="_button_vczzf_8"
      data-kind="tertiary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      See all activity
    </button>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should display the empty state for the unread filter 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      Congrats! You don’t have any unread messages
    </span>
    <button
      class="_button_vczzf_8"
      data-kind="tertiary"
      data-size="lg"
      role="button"
      tabindex="0"
    >
      Show all chats
    </button>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should not render the new room button if the user doesn't have the rights to create a room 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      No chats yet
    </span>
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_description"
    >
      Get started by messaging someone
    </span>
    <div
      class="flex mx_EmptyRoomList_DefaultPlaceholder"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
          />
        </svg>
        Start chat
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EmptyRoomList /> should render the default placeholder when there is no filter 1`] = `
<DocumentFragment>
  <div
    class="flex mx_EmptyRoomList_GenericPlaceholder"
    data-testid="empty-room-list"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: stretch; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_title"
    >
      No chats yet
    </span>
    <span
      class="mx_EmptyRoomList_GenericPlaceholder_description"
    >
      Get started by messaging someone or by creating a room
    </span>
    <div
      class="flex mx_EmptyRoomList_DefaultPlaceholder"
      style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m1.5 21.25 1.45-4.95a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1m2.45-1.2 3.2-.95a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712z"
          />
        </svg>
        Start chat
      </button>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.566 17-.944 4.094q-.086.406-.372.656t-.687.25q-.543 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.801-3.5H3.158q-.572 0-.916-.484a1.27 1.27 0 0 1-.2-1.078 1.12 1.12 0 0 1 1.116-.938H6.85l1.145-5h-3.12q-.57 0-.915-.484a1.27 1.27 0 0 1-.2-1.078A1.12 1.12 0 0 1 4.875 7h3.691l.945-4.094q.085-.406.372-.656.286-.25.686-.25.544 0 .887.469.345.468.2 1.031l-.8 3.5h4.578l.944-4.094q.085-.406.372-.656.286-.25.687-.25.543 0 .887.469t.2 1.031L17.723 7h3.119q.573 0 .916.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937H17.15l-1.145 5h3.12q.57 0 .915.484.343.485.2 1.079a1.12 1.12 0 0 1-1.116.937h-3.691l-.944 4.094q-.087.406-.373.656t-.686.25q-.544 0-.887-.469a1.18 1.18 0 0 1-.2-1.031l.8-3.5zm.573-2.5h4.578l1.144-5h-4.578z"
          />
        </svg>
        New room
      </button>
    </div>
  </div>
</DocumentFragment>
`;
